# elkar-a2a

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  package-lock.json  pyproject.toml  requirements.txt
.cursor/rules/: rule-for-react.mdc  rust-webapp-rule.mdc
.github/workflows/: python-ci.yml  python-version-and-publish.yml  release.yml  rust-ci.yml  version-and-publish.yml
a2a-client/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
a2a-client/generated-api/.openapi-generator/: FILES
a2a-client/generated-api/apis/: DebuggerHistoryApi.ts  DefaultApi.ts  index.ts
a2a-client/generated-api/models/: ApiKeyOutput.ts  DebuggerHistoryResponse.ts  PaginatedOutputTaskResponseRecordsInner.ts  StoreA2ADebuggerHistoryInput.ts  TaskResponse.ts  UnpaginatedOutputApiKeyOutputRecordsInner.ts  index.ts
a2a-client/src/: main.tsx
a2a-client/src/api/: api.ts
a2a-client/src/components/: App.tsx  ErrorMessage.tsx  GetTaskPanel.tsx  Layout.tsx  MethodNav.tsx  (+4 more)
app/: Dockerfile.chef
app/connector/: .env.template  .env.template.development  .env.template.production  Cargo.toml
example/: README.md  claudePrompt.txt  claude_desktop_config.json  server.py  server_cal.py  server_mcp.py
src/: app.py  common.py  main.py
src/elkar/: __init__.py  a2a_errors.py  a2a_types.py  app.py  app_sample.py  appv2.py  cli.py  main.py  server_mcp.py
src/server/: server.py
src/store/: base.py  in_memory.py
src/task_manager/: task_manager_base.py  task_manager_with_store.py
src/task_queue/: base.py  in_memory.py
(+138 files in other folders)
